# moca-pop

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
example_datasets/foot_drop/: subject.vsk  tpose.enf  tpose.history  tpose.system  tpose.x1d  tpose.xcp
example_datasets/shoe_stepping/: rom_calibration.system  rom_calibration.xcp  shoe_stepping.Session.enf  subject.mp  subject.vsk  trial01.system  trial01.xcp
example_pipelines/ETH_NUSHU/: ETH_NUSHU_DeleteUnlabeled.Pipeline  ETH_NUSHU_FillGaps_Pass1.Pipeline  ETH_NUSHU_FillGaps_Pass2.Pipeline  ETH_NUSHU_FillGaps_Pass3.Pipeline  ETH_NUSHU_Filter.Pipeline  ETH_NUSHU_MocaPop_Swap.Pipeline  ETH_NUSHU_MocaPop_Unassign.Pipeline  ETH_NUSHU_R&L.Pipeline  ETH_NUSHU_Save.Pipeline  ETH_NUSHUcalib.Pipeline  FAI_moca_pop_demo.Pipeline
moca_pop/aux_scripts/: generate_template_file_mapping.py  print_trial_names.py  test_connect.py
moca_pop/config/: directory.py  logger.py  regex.py
moca_pop/model_templates/: rigidBodyTemplate.py  template_file_mapping.json
moca_pop/models/: marker_trajectory.py  rigid_body.py
moca_pop/utils/: argparse_utils.py  c3d_parser.py  json_utils.py  model_template_loader.py  plot_utils.py  quality_check.py  rigid_body_loader.py  vicon_utils.py  vsk_parser.py
mocap_popy/aux/: generate_template_file_mapping.py  rigid_body_scorer.py
mocap_popy/aux_scripts/: generate_template_file_mapping.py
mocap_popy/config/: directory.py  logger.py  regex.py
mocap_popy/model_templates/: baseTemplate.py  rigidBodyTemplate.py  template_file_mapping.json
mocap_popy/models/: marker_trajectory.py  (+1 more)
(+99 files in other folders)
