[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mocap_popy"
version = "1.0.0"
requires-python = ">=3.11"
dependencies=[
    "numpy"
]

[tool.setuptools]
packages = { find = { include = ["mocap_popy", "mocap_popy.*"] } }

[tool.setuptools.package-dir]
mocap_popy = "mocap_popy"