[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mocap_popy"
version = "1.0.0"
requires-python = ">=3.11"
dependencies=[
    "numpy",
    "c3d",
    "dash",
    "matplotlib",
    "pydantic",
    "tqdm",
]

[tool.setuptools]
packages = { find = { include = ["mocap_popy", "mocap_popy.*"], exclude = ["test", "*.test", "test.*", "*.test.*"] } }

[tool.setuptools.package-dir]
mocap_popy = "mocap_popy"

[project.optional-dependencies]
test = []