[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moca_pop"
version = "1.0.0"
requires-python = ">=3.11"
dependencies=[
    "numpy",
    "c3d",
    "dash",
    "matplotlib",
    "pydantic",
    "tqdm",
]

[tool.setuptools]
packages = { find = { include = ["moca_pop", "moca_pop.*"], exclude = ["test", "*.test", "test.*", "*.test.*"] } }

[tool.setuptools.package-dir]
moca_pop = "moca_pop"

[project.optional-dependencies]
test = []